tests/parser/bug_77/invalid_1.m.out
In invalid_1.m, line 4
| for ((i = 1:5))
|      ^ error: expected IDENTIFIER, found BRA instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
