tests/parser/bug_77/invalid_1.m
% (c) Copyright 2020 Florian Schanda

% Legal in Octave, not legal in MATLAB
for ((i = 1:5))
  disp(i);
end
